tests/__snapshots__/validation-template-test-file-syntax-errors-stderr.snap.txt
Error: ')' expected. ts(1005)

   7 | }
   8 | 
   9 | export default getTestText(;
     |                            ~
  10 | 

       at ./__typetests__/sample.tst.ts:9:28

